--- a/src/Ls/.nuspec
+++ b/src/Ls/.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Ls</id>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <authors>CharlesShang</authors>
     <owners>CharlesShang</owners>
     <licenseUrl>http://www.njlemai.com/</licenseUrl>
@@ -16,6 +16,7 @@
     <dependencies>
       <dependency id="Castle.Core" version="3.3.0" />
       <dependency id="Castle.Windsor" version="3.3.0" />
+      <dependency id="Dapper" version="1.42" />
       <dependency id="log4net" version="2.0.3" />
     </dependencies>
   </metadata>
