--- a/src/Ls.Mvc/.nuspec
+++ b/src/Ls.Mvc/.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Ls.Mvc</id>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <authors>CharlesShang</authors>
     <owners>CharlesShang</owners>
     <licenseUrl>http://www.njlemai.com/</licenseUrl>
@@ -10,7 +10,7 @@
     <iconUrl>http://172.18.0.108:1379/icon/ctw.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Ls开发框架 MVC 组件</description>
-    <releaseNotes>第一个发布版本，初步确定框架功能及使用方式。</releaseNotes>
+    <releaseNotes>更改权限验证方式</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>Ls MVC</tags>
     <dependencies>
@@ -21,6 +21,7 @@
       <dependency id="Microsoft.AspNet.Razor" version="3.2.3" />
       <dependency id="Microsoft.AspNet.WebPages" version="3.2.3" />
       <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+      <dependency id="Newtonsoft.Json" version="7.0.1" />
     </dependencies>
   </metadata>
 </package>
