--- a/src/Ls/.nuspec
+++ b/src/Ls/.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Ls</id>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <authors>CharlesShang</authors>
     <owners>CharlesShang</owners>
     <licenseUrl>http://www.njlemai.com/</licenseUrl>
@@ -10,7 +10,7 @@
     <iconUrl>http://172.18.0.108:1379/icon/ctw.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Ls-Admin开发框架</description>
-    <releaseNotes>第一个发布版本，初步确定框架功能及使用方式。</releaseNotes>
+    <releaseNotes>更改权限验证方式。</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>Ls</tags>
     <dependencies>
