--- a/src/Ls/Ls.csproj
+++ b/src/Ls/Ls.csproj
@@ -42,6 +42,10 @@
       <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -69,7 +73,7 @@
     <Compile Include="Authorization\Interceptor\AuthorizationInterceptorRegistrar.cs" />
     <Compile Include="Authorization\IPermissionChecker.cs" />
     <Compile Include="Authorization\IUser.cs" />
-    <Compile Include="Authorization\IUserStore.cs" />
+    <Compile Include="Authorization\IAuthStore.cs" />
     <Compile Include="Authorization\IMenu.cs" />
     <Compile Include="Authorization\NullPermissionChecker.cs" />
     <Compile Include="Authorization\IPermission.cs" />
