--- a/src/Example.Mvc/Areas/SystemManage/Views/web.config
+++ b/src/Example.Mvc/Areas/SystemManage/Views/web.config
@@ -10,14 +10,12 @@
 
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-    <pages pageBaseType=" Example.MvcFramework.Base.TtsBaseViewPage">
+    <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="Tts.Framework.AspNetMvc" />
-        <add namespace="Tts.Framework.AspNetMvc.Extension" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
