--- a/src/Example.Mvc/Web.config
+++ b/src/Example.Mvc/Web.config
@@ -19,6 +19,13 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="Off">
+      <!--<error statusCode="404" redirect="~/Home/ErrorPage_404" />-->
+      <!--<error statusCode="500" redirect="~/Home/ErrorPage_500" />-->
+    </customErrors>
+    <authentication mode="Forms">
+      <forms name="Ls.Auth" loginUrl="~/Home/Login" protection="All" timeout="43200" path="/" requireSSL="false" slidingExpiration="true" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
