--- a/src/Example.Application/packages.config
+++ b/src/Example.Application/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="6.0.2" targetFramework="net45" />
+  <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
+  <package id="EmitMapper" version="1.0.0" targetFramework="net45" />
 </packages>
