--- a/src/Example.Mvc/Example.Mvc.csproj
+++ b/src/Example.Mvc/Example.Mvc.csproj
@@ -593,6 +593,8 @@
     <Compile Include="Areas\SystemManage\Controllers\UserManageController.cs" />
     <Compile Include="Areas\SystemManage\SystemManageRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Framework\Auth\ActionTemlate.cs" />
+    <Compile Include="Framework\Auth\PermissionValidator.cs" />
     <Compile Include="Framework\Base\BaseController.cs" />
     <Compile Include="Framework\Base\LsWebViewPage.cs" />
     <Compile Include="Global.asax.cs">
