弹出层操作表单样式调整

--- a/src/Example.Mvc/Web.config
+++ b/src/Example.Mvc/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="conn_debug" connectionString="Data Source=172.18.14.64;Initial Catalog=LsWebExample_dev;User Id =sa;Password=123456;" providerName="System.Data.SqlClient" />
+    <add name="conn_debug" connectionString="Data Source=.;Initial Catalog=LsWeb_dev;User Id =sa;Password=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
